@@ -56,6 +56,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14869) Add API module for accessing QueryPage-based special pages
 * (bug 14020) API for Special:Unwatchedpages
 * (bug 24287) Wrap API Help output at 100 characters
+* Add a realname uiprop option to query=userinfo so a user's realname can be extracted
 
 === Languages updated in 1.18 ===
 
